test/errors/classes/class_base_constructor_missing_fail.hy
class Base
{
    Base(int value) {}
}

class Derived inherits Base
{
    Derived() {}
}

// expect: Constructor for class 'Derived' must invoke base constructor of 'Base'